# imscope

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE-AGPL  README.md  main.cpp
.github/workflows/: integration-tests.yml  pre-commit.yml  rust-ci.yml  windows.yml
cmake/: imgui.cmake
common/: CMakeLists.txt
common/doc/: imscope_consumer_doc.md  imscope_producer_doc.md
common/examples/: CMakeLists.txt  multi_scope.cpp  scalar_producer.cpp  settings_example.cpp  simple.cpp  sine_wave.cpp  zero_copy.cpp
common/include/: imscope_common.h  imscope_consumer.h  imscope_producer.h  imscope_tools.h
common/src/: imscope_consumer.cpp  imscope_internal.cpp  imscope_internal.h  imscope_producer.cpp  imscope_tools.cpp
common/test/: CMakeLists.txt  integration_test.cpp
gui/: CMakeLists.txt
gui/src/: imscope-gui.cpp
include/: imscope_common.h  imscope_consumer.h  imscope_producer.h
src/: app.rs  consumer.rs  imscope_cache.h  imscope_consumer.cpp  imscope_internal.cpp  imscope_internal.h  imscope_producer.cpp  imscope_tools.cpp  imscope_tools.h  lib.rs  main.rs
test/: integration_test.cpp  main.cpp
